# geors

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
crates/geo-math/: Cargo.toml
crates/geo-math/src/: lib.rs
crates/geors/: Cargo.toml
crates/geors/src/: capability.rs  constants.rs  geodesic.rs  geodesic_line.rs  great_circle.rs  lib.rs  polygon_area.rs
python/geors/: __init__.py
python/geors/distance/: __init__.py
python/geors/extra/: __init__.py
python/geors/geocoders/: __init__.py
src/: lib.rs  py_distance.rs  py_geodesic.rs  py_units.rs
tests/: bench_distance.py  bench_realworld.py  test_dropin_compat.py  test_python_compat.py  test_realworld.py  verify_accuracy.py
