[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "geors"
version = "0.1.0"
description = "Rust-powered drop-in replacement for geopy — geodesic, great-circle, polygon area, and more"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Fahrenheit Research"}]
keywords = ["geodesy", "geocoding", "geopy", "rust", "geodesic", "distance", "vincenty", "karney"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = ["numpy>=1.20"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/FahrenheitResearch/geors"
Repository = "https://github.com/FahrenheitResearch/geors"
Issues = "https://github.com/FahrenheitResearch/geors/issues"

[tool.maturin]
python-source = "python"
module-name = "geors._geors"
features = ["pyo3/extension-module"]
